[package]
name = "test-serenity-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "9b904ba5363133437b2fb4a5121535e807f9e8c0" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
serde = "1"
serde_json = "1"