[package]
name = "test-serenity-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity", rev = "571b091a6622bac60c8823cf5b3f01e465cbf71e" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.11"
serde = "1"
serde_json = "1"
reqwest = "0.12"